--- a/composer.json
+++ b/composer.json
@@ -18,17 +18,15 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3"
+        "phpstan/phpstan": "^0.12.85",
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
-        },
-        "files": [
-            "app/Http/Helpers/functions.php"
-        ]
+        }
     },
     "autoload-dev": {
         "psr-4": {
