--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,7 +2,7 @@ imports:
     - php
 
 filter:
-    excluded_paths: [vendor/*, test/*, build/_js/*]
+    excluded_paths: [vendor/*, test/*, build/*]
 
 build:
     nodes:
