--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -12,6 +12,7 @@ build:
                     version: 7.4
     tests:
         override:
+            - php-scrutinizer-run
             -
                 command: make phpunit
                 coverage:
