--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -2,7 +2,7 @@ imports:
     - php
 
 filter:
-    excluded_paths: [vendor/*, test/*, build/*, database/*]
+    excluded_paths: [vendor/*, test/*, build/*]
 
 build:
     nodes:
@@ -11,6 +11,8 @@ build:
                 php:
                     version: 7.4
     tests:
+        before:
+            - 'cp .env.scrutinizer .env'
         override:
             - php-scrutinizer-run
             -
